# http-server

./: Cargo.toml  README.md  readme.txt  s.txt
src/: httprequest.rs  main.rs  response.rs  router.rs
test/: a  a.txt  apple_banana_blueberry_strawberry  apple_mango_orange_grape  te.txt  test.txt
