[package]
name = "http-server-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.59"                                   
bytes = "1.3.0"                                     
thiserror = "1.0.38"                              
tokio = { version = "1.23.0", features = ["full"] }
itertools = "0.11.0"                                
flate2 = "1.0"